# Livekit-Rag

./: .gitignore  aws_S3_vectors_policy.json  embed_query_engine.py  embed_query_engine_old.py  pyproject.toml  query_engine.py  query_engine_old.py  requirements.txt  s3_vector_storage.py  setup_script.bat  useful commands.txt
scripts/: delete-vector-index.bat
